# computer-science

./: .gitignore  README.md  pyproject.toml
computer-science/: lcg_inverse_transform.ipynb  rejection_sampling.ipynb
database-management/: object_relational_db.ipynb
deep-learning/ cifar10/: 23c01024.ipynb
knowledge-rep/: computational_networks.ipynb
machine-learning/: ada_boost.ipynb  arima_ts.ipynb  auto_grad.ipynb  gradient_boosting_machine.ipynb  hierachical_clustering.ipynb  locality_sensitive_hashing.ipynb  multicollinearity_effect.ipynb  naive_bayes.ipynb  piecemeal_clustering.ipynb  self_organizing_map.ipynb
machine-learning/archived/: piecemeal_clustering.ipynb
machine-learning/indev/: connect_documents.ipynb  data_augmentation.ipynb  piecemeal_clustering.ipynb
machine-learning/torchfm/: pyproject.toml
machine-learning/torchfm/src/torchfm/data/: __init__.py  _fmdataset.py  data_utils.py  movielens100k.py
machine-learning/torchfm/src/torchfm/examples/: lightfm_movielens.ipynb
machine-learning/torchfm/src/torchfm/model/: __init__.py  _loss.py  _torchfm.py  _trainer.py  evaluation.py
math-statistics/: histogram_implementation.ipynb  kernel_density_estimation.ipynb  singular_value_decomposition.ipynb
math-statistics/indev/: lepski_estimation.ipynb
natural-language-processing/: left_right_maximum_matching.ipynb  llm_tool_use.ipynb  rag_langchain.ipynb  retrieval_aug_generation.ipynb  seq2seq.ipynb  tf_idf.ipynb
natural-language-processing/rag/: example_story.txt  inference_service.py  inference_template.txt  vector_store.py
(+6 files in other folders)
