[tool.poetry]
name = "computer-science"
version = "0.1.0"
description = ""
authors = ["tcstrength <thai.cuong1404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
pydantic = "^2.7.4"
scipy = "^1.14.0"
pillow = "^10.4.0"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.2"
opencv-python = "^4.10.0.84"
tensorflow = "^2.17.0"
setuptools = "^75.1.0"
keras = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
