[tool.poetry]
name = "torchfm"
version = "0.1.0"
description = "An implementation of LightFM using pytorch"
authors = ["tcstrength <thai.cuong1404@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{from="src", include="torchfm"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
torch = "^2.5.1"
loguru = "^0.7.2"
requests = "^2.32.3"
tqdm = "^4.67.1"
matplotlib = "^3.9.2"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
